# yail

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
cmake/: Findyail.cmake
config/: bscore.in
contrib/boost_asio/: CMakeLists.txt
contrib/boost_asio/cmake/: Findboost_asio.cmake
docs/: CMakeLists.txt  Doxyfile.in  yail_pubsub_arch.odg  yail_rpc_arch.odg
examples/: CMakeLists.txt
examples/pubsub/hello/: CMakeLists.txt  pub.cpp  sub.cpp  topics.h
examples/pubsub/hello/messages/: CMakeLists.txt  hello.proto
examples/rpc/hello/: CMakeLists.txt  client.cpp  provider.cpp  rpcs.h  server.cpp
examples/rpc/hello/messages/: CMakeLists.txt  hello.proto
tests/: CMakeLists.txt
tests/pubsub/shmem/: CMakeLists.txt  pubsub.cpp  test.cpp  topics.h
tests/pubsub/shmem/messages/: CMakeLists.txt
tests/pubsub/udp/: CMakeLists.txt  pubsub.cpp  test.cpp  topics.h
tests/pubsub/udp/messages/: CMakeLists.txt  hello.proto
tests/rpc/hello/: client.cpp  server.cpp
tests/rpc/unix_domain/: CMakeLists.txt  rpc.cpp  rpcs.h  test.cpp
tests/rpc/unix_domain/messages/: CMakeLists.txt  hello.proto
wrappers/: CMakeLists.txt
wrappers/pubsub/shell/: CMakeLists.txt  pub.cpp
wrappers/pubsub/shell/messages/: CMakeLists.txt  general.proto
yail/: CMakeLists.txt  buffer.h  config.h.in  exception.h  io_service.h  log.h  mainpage.h  memory.h
yail/impl/: buffer.cpp  exception.cpp  log.cpp
yail/pubsub/: data_reader.h  data_writer.h  error.h  service.h  topic.h  topic_qos.h  topic_traits.h
yail/pubsub/detail/: data_reader_impl.h  data_writer_impl.h  publisher.h  service_impl.h  subscriber.h  topic_impl.h  topic_info.h
yail/pubsub/detail/impl/: publisher.cpp  subscriber.cpp
yail/pubsub/detail/messages/: CMakeLists.txt  pubsub.proto
yail/pubsub/impl/: data_reader.h  data_writer.h  error.cpp  service.cpp  service.h  topic.h
yail/pubsub/transport/: shmem.h  udp.h
yail/pubsub/transport/detail/: shmem_impl.h  udp_impl.h
yail/pubsub/transport/detail/impl/: shmem_impl.cpp  udp_impl.cpp
yail/pubsub/transport/impl/: shmem.cpp  shmem.h  udp.cpp  udp.h
yail/rpc/: client.h  error.h  provider.h  rpc.h  rpc_traits.h  service.h  trans_context.h
yail/rpc/detail/: client.h  client_impl.h  context_impl.h  provider_impl.h  rpc_impl.h  server.h  service_impl.h  service_locator.h
yail/rpc/detail/impl/: client.cpp  server.cpp  service_impl.cpp  service_locator.cpp
yail/rpc/detail/messages/: CMakeLists.txt  rpc.proto  yail.proto
yail/rpc/impl/: client.h  error.cpp  provider.h  rpc.h  service.cpp  service.h
yail/rpc/transport/: traits.h  transport_traits.h  unix_domain.h
yail/rpc/transport/detail/: unix_domain_impl.h
yail/rpc/transport/detail/impl/: unix_domain_impl.cpp
yail/rpc/transport/impl/: unix_domain.cpp  unix_domain.h
